@@ -1,3 +1,8 @@
+Tue Aug 05 09:35:16 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/unittests/range_speed.py: Fix test to make problem more
+	  obvious.
+
 Tue Aug 05 08:08:12 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/indexerconnection.py,xappy/searchconnection.py: Convert
